--- a/src/djangoflix/static/djangoflix/style.css
+++ b/src/djangoflix/static/djangoflix/style.css
@@ -104,13 +104,11 @@
   flex-grow: 0;
 }
 
-/* TODO: Add :hover :active :link to .orange-btn */
-
 .watch-icon-container {
   position: absolute;
   top: 0px;
   width: 100%;
-  height: 50%;
+  height: 45%;
   text-align: center;
   padding-top: 25px;
   background-color: rgb(12 12 12 / 0.75);
@@ -119,11 +117,19 @@
 
 .details-icon-container {
   position: absolute;
-  top: 50%;
+  top: 45%;
   width: 100%;
-  height: 50%;
+  height: 55%;
   text-align: center;
   background-color: rgb(12 12 12 / 0.75);
+  font-size: 22px;
+}
+
+.favorite-icon-container {
+  position: absolute;
+  bottom: 10%;
+  width: 100%;
+  text-align: center;
   font-size: 22px;
 }
 
