--- a/src/djangoflix/templates/djangoflix/base.html
+++ b/src/djangoflix/templates/djangoflix/base.html
@@ -69,7 +69,7 @@
        </div>
     </div>
     {% endif %}
-    <main class="py-3 px-3 mx-auto">
+    <main class="p-3 mx-auto">
         {% block content %}
         
         {% endblock %}
